Revert "fix(ui): disable Instagram component max-height during site edit mode"
This reverts commit 91f7937292305d100ddadc5e512f13ac24983559.

--- a/projects/ngx-ramblers/src/app/pages/instagram/instagram.component.html
+++ b/projects/ngx-ramblers/src/app/pages/instagram/instagram.component.html
@@ -1,24 +1,22 @@
-<div class="card mb-3" [class.card-fixed-height]="!siteEditService.active()">
-  <div class="card-body p-3">
-    <h5 class="card-title cta-button cta-instagram rounded"><a [href]="externalSystems?.instagram?.groupUrl + '/' + externalSystems?.instagram?.groupName">
-      <img class="instagram-image"
-           src="/assets/images/local/instagram.png"><span
-      class="instagram-title float-end">{{ externalSystems?.instagram?.groupName }}</span></a>
-    </h5>
-    <p class="card-text">
-      <app-dynamic-content [anchor]="BuiltInAnchor.INSTAGRAM_CONTENT" contentPathReadOnly/>
-      @if (recentMedia?.length > 0) {
-        <div class="spinner-border text-primary" role="status">
-          <span class="visually-hidden">Loading...</span>
-        </div>
-        @for (media of recentMedia; track media) {
-          <a [href]="media.permalink" target="_blank"
-             delay="500" [tooltip]="dateUtils.displayDate( media.timestamp) + ' - ' + media.caption" [placement]="'top'">
-            <img [src]="media?.media_url" [alt]="media?.caption" class="rounded img-thumbnail"
-                 [style]="'width:' + imageWidth(media)+'; height: '+ imageHeight(media)"/>
-          </a>
-        }
+<app-card-container>
+  <h5 class="card-title cta-button cta-instagram rounded"><a [href]="externalSystems?.instagram?.groupUrl + '/' + externalSystems?.instagram?.groupName">
+    <img class="instagram-image"
+         src="/assets/images/local/instagram.png"><span
+    class="instagram-title float-end">{{ externalSystems?.instagram?.groupName }}</span></a>
+  </h5>
+  <p class="card-text">
+    <app-dynamic-content [anchor]="BuiltInAnchor.INSTAGRAM_CONTENT" contentPathReadOnly/>
+    @if (recentMedia?.length > 0) {
+      <div class="spinner-border text-primary" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+      @for (media of recentMedia; track media) {
+        <a [href]="media.permalink" target="_blank"
+           delay="500" [tooltip]="dateUtils.displayDate( media.timestamp) + ' - ' + media.caption" [placement]="'top'">
+          <img [src]="media?.media_url" [alt]="media?.caption" class="rounded img-thumbnail"
+               [style]="'width:' + imageWidth(media)+'; height: '+ imageHeight(media)"/>
+        </a>
       }
-    </p>
-  </div>
-</div>
+    }
+  </p>
+</app-card-container>
