--- a/projects/ngx-ramblers/src/app/pages/committee/home/committee-home.component.html
+++ b/projects/ngx-ramblers/src/app/pages/committee/home/committee-home.component.html
@@ -1,7 +1,7 @@
 <app-page [pageTitle]="pageTitle">
   <app-committee-year [committeeYear]="committeeYear" [notify]="notify"></app-committee-year>
-  <app-dynamic-content [anchor]="BuiltInAnchor.COMMITTEE_YEARS" areaAsContentPath contentPathReadOnly/>
-  <app-dynamic-content [anchor]="BuiltInAnchor.ACTION_BUTTONS" areaAsContentPath contentPathReadOnly/>
+  <app-dynamic-content [anchor]="BuiltInAnchor.COMMITTEE_YEARS" areaAsContentPath contentPathReadOnly preventRedirect/>
+  <app-dynamic-content [anchor]="BuiltInAnchor.ACTION_BUTTONS" areaAsContentPath contentPathReadOnly preventRedirect/>
   <div class="row">
     <div class="col-sm-12">
       @if (showAlertMessage()) {
