--- a/projects/ngx-ramblers/src/app/login-panel/login-panel.component.html
+++ b/projects/ngx-ramblers/src/app/login-panel/login-panel.component.html
@@ -1,4 +1,4 @@
-<div class="justify-content-around panel-container me-lg-3 pt-1" [ngClass]="memberLoggedIn() ? 'd-flex': 'd-lg-flex'">
+<div [class]="'justify-content-around panel-container me-lg-3 pt-1 ' + (memberLoggedIn() ? 'd-flex': 'd-lg-flex')">
   <a class="login-text" (click)="loginOrLogout()">
     @if (memberLoggedIn()) {
       <img class="home-logo"
